Fix right align

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -35,13 +35,16 @@ body{
 }
 
 .bubble_client{
-    float: right;
     background:linear-gradient(123deg,rgba(253,200,48,1) 0%,rgba(255,95,109,1) 100%);
     box-shadow:0px 3px 10px rgba(255,216,0,0.14);
     color:white;
     font-weight:bold;
 }
 
+.client_right_align{
+    display: flex;
+    justify-content: flex-end;
+}
 
 .logo{
     width: 210px;
